--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,13 @@
     <display-name>Archetype Created Web Application</display-name>
 
     <!-- Spring MVC dispatcher servlet -->
+
+
+
+    <welcome-file-list>
+        <welcome-file>/helloWorld</welcome-file>
+    </welcome-file-list>
+
     <servlet>
         <servlet-name>mvc-dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -44,4 +51,6 @@
         <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+
+
 </web-app>
